--- a/console/app/views/cartridges/next_steps.html.haml
+++ b/console/app/views/cartridges/next_steps.html.haml
@@ -17,7 +17,7 @@
       Most of the capabilities of OpenShift are exposed through our command line tool, <code>rhc</code>.
       Whether it's adding cartridges, checking uptime, or pulling log files from
       the server, you can quickly put a finger on the pulse of your application.
-      #{link_to "Follow these steps to install the client", getting_started_path(:anchor => 'install_client_tools')}
+      #{link_to "Follow these steps to install the client", getting_started_guide_url}
       on Linux, Mac OS X, or Windows.
 
     %p
@@ -26,17 +26,17 @@
     %pre.cli
       = preserve do
         :escaped
-          rhc app cartridge list
+          rhc cartridge list
     %p
       You can manage the cartridge by running one of these commands
     %pre.cli
       = preserve do
         :escaped
-          rhc app cartridge start -a #{@application.name} -c #{@cartridge.name}
-          rhc app cartridge stop -a #{@application.name} -c #{@cartridge.name}
-          rhc app cartridge restart -a #{@application.name} -c #{@cartridge.name}
-          rhc app cartridge reload -a #{@application.name} -c #{@cartridge.name}
-          rhc app cartridge status -a #{@application.name} -c #{@cartridge.name}
+          rhc cartridge start -a #{@application.name} -c #{@cartridge.name}
+          rhc cartridge stop -a #{@application.name} -c #{@cartridge.name}
+          rhc cartridge restart -a #{@application.name} -c #{@cartridge.name}
+          rhc cartridge reload -a #{@application.name} -c #{@cartridge.name}
+          rhc cartridge status -a #{@application.name} -c #{@cartridge.name}
 
     %p
       You can remove the cartridge by running the following command.
@@ -45,7 +45,7 @@
     %pre.cli
       = preserve do
         :escaped
-          rhc app cartridge remove -a #{@application.name} -c #{@cartridge.name}
+          rhc cartridge remove -a #{@application.name} -c #{@cartridge.name}
 
   .span5
     %h2 Cartridge info
